# fV-SRN

./: .gitignore  CMakeLists.txt  compile-library-server.sh  env.txt  env.yaml  setup.py
applications/: eval_CompressionTeaser.py  infer_all.sh  infer_all.txt  train.sh  train_all.sh  train_all.txt  train_all_comparison.txt  train_all_comparison_0.txt  train_all_comparison_1.txt  train_comparison.sh  train_output.txt  train_rtx3090ti.sh  train_rtx3090ti_0.txt  train_rtx3090ti_1.txt  train_rtx3090ti_10.txt  train_rtx3090ti_11.txt  train_rtx3090ti_2.txt  train_rtx3090ti_3.txt  train_rtx3090ti_4.txt  train_rtx3090ti_5.txt  train_rtx3090ti_6.txt  train_rtx3090ti_7.txt  train_rtx3090ti_8.txt  train_rtx3090ti_9.txt  train_small_samples.sh
applications/config-files/instant-vnr/: chameleon.json  heatrelease_10atm.json  heatrelease_1atm.json  mechhand.json  pigheart.json  richtmyer_meshkov.json  rm_t60.json  supernova.json  temp_10atm.json  temp_1atm.json  vmhead.json
applications/volnet/: eval_CompressionTeaser.py  inference.py  inference_lite.py  train_volnet_lite.py  training_data.py  util_findNetworkDimension.py
compression/src/: memtrace.h
renderer/: CMakeLists.txt  transfer_function_gaussian.cpp  transfer_function_piecewise.cpp  volume_interpolation_network.cpp
standalone/: CMakeLists.txt  cuda_buffer.h  cuda_utils.h  loader.hpp  lz4cpp.cpp  lz4cpp.hpp  mainSRNKernel.cu  renderer_activations.cuh  renderer_volume_tensorcores.cuh  test.json  testSRNKernel.cu  third-party  volume_interpolation_network.cu  volume_interpolation_network.h
